# devsecops-lab-azure

./: .checkov.yaml  .dockerignore  .gitignore  .terraform.lock.hcl  Dockerfile  locals.tf  main.tf  outputs.tf  providers.tf  pyproject.toml  terraform.tfvars.example  variables.tf  versions.tf
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-cd.yml  codeql.yml  iac-scan.yml
app/: main.py
modules/acr/: main.tf  outputs.tf  variables.tf
modules/app-service/: main.tf  outputs.tf  variables.tf
modules/identity/: main.tf  outputs.tf  variables.tf
modules/keyvault/: main.tf  outputs.tf  variables.tf
modules/monitoring/: main.tf  outputs.tf  variables.tf
tests/: test_main.py
